CSS fix for alignment of packages

--- a/src/packages/packages.scss
+++ b/src/packages/packages.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: stretch;
     align-content: stretch;
 
